# fullstack_rust_game

./: .env  .gitignore  Cargo.toml  bacon.toml  docker-compose.yaml  users.json
app/: analysis_options.yaml  pubspec.yaml
app/lib/: main.dart
backend/: Cargo.toml  Dockerfile  bacon.toml
backend/migrations/: 0001_initial.sql
backend/src/: main.rs
backend/src/route/: mod.rs  user.rs
backend/src/service/db/: mod.rs  repo.rs
backend/src/service/db/models/: friendship.rs  game.rs  item.rs  mod.rs  user.rs
backend/src/service/db/postgres/: mod.rs  poker_game.rs  user.rs
src/: db.rs  main.rs
src/route/: user.rs
src/service/db/: mod.rs  repo.rs
src/service/db/models/: mod.rs  user.rs
src/service/db/postgres/: mod.rs  user.rs
