[package]
name = "fullstack_rust_game"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = { version = "0.13.1", features = ["actix-macros", "actix_derive", "macros"]}
actix-web = { version = "4.4.1" , features = ["default", "macros", "actix-macros"]}
serde = { version = "1.0.195",  features = ["derive", "serde_derive", "default"]}
tokio = { version = "1.35.1", features = ["full"]}
serde_json = "1.0.111"
sqlx = { version = "0.7.3", features = ["default", "macros", "sqlx-macros", "sqlx-postgres"]}
env_logger = { version = "0.10.2", features = ["default"] }
