[package]
name = "poker_server"
version = "0.1.0"
edition = "2021"

[dependencies]
actix = "0.13.1"
actix-web = "4.4.1"
env_logger = "0.11.0"
serde = { version = "1.0.195", features = ["derive"] }
serde_json = "1.0.111"
tokio = { version = "1.35.1", features = ["full"] }
dotenv = "0.15.0"
arc-swap = "1.6.0"
log = "0.4.20"
tokio-postgres = "0.7.10"
bb8 = "0.8.1"
bb8-postgres = "0.8.1"
sqlx = { version = "0.7.3", features = ["postgres", "runtime-tokio", "uuid", "tls-rustls"] }
uuid = { version = "1.7.0", features = ["v4", "serde"] }
